--- a/Labrinth/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Labrinth/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -979,7 +979,7 @@ BlueprintGraph.LastCompileMethod=Unknown
 CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=-58.000 Y=112.000
+ScreenPosition=X=33.000 Y=0.000
 WindowSize=X=1283.000 Y=718.000
 InitiallyMaximized=True
 
@@ -1158,4 +1158,7 @@ NodeTemplateCacheCapMB=20.000000
 
 [MRU]
 MRUItem0=/Game/FirstPersonCPP/Maps/FirstPersonExampleMap
+
+[PluginBrowser]
+InstalledPlugins=XRVisualization
 
